# Rust

./: README.md
Learning/: HOW_TO_LEARN.md  README.md
Learning/01_hello_world/: README.md  main.rs
Learning/02_variables_and_mutability/: README.md  main.rs
Learning/03_data_types/: README.md  main.rs
Learning/04_functions/: README.md  main.rs
Learning/05_control_flow/: README.md  main.rs
Learning/06_ownership/: README.md  main.rs
Learning/07_references_and_borrowing/: README.md  main.rs
Learning/08_slices/: README.md  main.rs
Learning/09_structs/: README.md  main.rs
Learning/10_enums/: README.md  main.rs
Learning/11_pattern_matching/: README.md  main.rs
Learning/12_modules_and_crates/: README.md  main.rs
Learning/13_collections/: README.md  main.rs
Learning/14_error_handling/: README.md  main.rs
Learning/15_generics_and_traits/: README.md  main.rs
Learning/16_lifetimes/: README.md  main.rs
Learning/17_closures_and_iterators/: README.md  main.rs
Learning/18_smart_pointers/: README.md  main.rs
Learning/19_concurrency/: README.md  main.rs
Learning/20_async_await/: README.md  main.rs
Project/rustWeb/: Cargo.toml  README.md
Project/rustWeb/src/: main.rs  models.rs  state.rs
Project/rustWeb/src/handlers/: api.rs  mod.rs  pages.rs
Project/rustWeb/static/css/: style.css
Project/rustWeb/static/js/: app.js
Project/rustWeb/templates/: about.html  base.html  index.html  todos.html  users.html
